# Vault

./: .gitignore  DESIGN.md  README.md  update_release.ps1  vault.py
app/: index.html  package-lock.json  package.json
app/src/: main.ts  style.css  theme.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: api_server.rs  commands.rs  crypto.rs  lib.rs  vault.rs  wts_monitor.rs
extension/: background.js  content.js  manifest.json  popup.html  popup.js
